--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,11 @@ name = "audio-signal-processing"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.10"
 dependencies = [
+    "sms-tools>=1.0",
+    "numpy<2.0",
+    "scipy>=1.14.1",
     "matplotlib>=3.9.2",
     "notebook>=7.2.2",
-    "scipy>=1.14.1",
 ]
